fixed contract to contrast

--- a/style.css
+++ b/style.css
@@ -1,18 +1,11 @@
-<<<<<<< HEAD
 .rainbow {
     width: 500px;
     height: 400px;;
-=======
+}
 .rainbow-container {
     justify-content: right;
     display: flex;
     margin-right: 5em;
-}
-.rainbow {
-    width: 500px;
-    height: 400px;
-    border-radius: 15px;
->>>>>>> c318aa5 (Fixed margin and pushed rainbow img to right)
 }
 .fire {
     width: 300px;
@@ -32,7 +25,6 @@
     align-items: center;
     height: 100px;
 }
-<<<<<<< HEAD
 button {
     background-color: #3882F6;
     color: white;
@@ -44,17 +36,9 @@ button {
 }
 .header-second-container {
     background-color: #1F2937;
-=======
-header {
-    color: white;
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    font-size: 24px;
-}
-.header-second-container {
-    background-color: #1F2937;
     display: flex;
     flex-direction: column;
->>>>>>> c318aa5 (Fixed margin and pushed rainbow img to right)
+    align-self: auto;
 }
 .hero-second-text {
     font-size: 18px;
@@ -79,18 +63,11 @@ header {
 .call-container {
     background-color: #3882F6;
 }
-<<<<<<< HEAD
-header {
-    color: white;
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    font-size: 24px;
-}
-=======
-
->>>>>>> c318aa5 (Fixed margin and pushed rainbow img to right)
 .logo {
     margin-right: 65rem;
     padding: 10px;
+    color: white;
+    font-size: 24px;
 }
 .item-container {
     display: flex;
@@ -99,18 +76,6 @@ header {
 .items {
     font-size: 18px;
 }
-<<<<<<< HEAD
-=======
-button {
-    background-color: #3882F6;
-    color: white;
-    border-radius: 5px;
-    border-style: none;
-    padding: 5px;
-    width: 80px;
-    font-weight: 700;
-}
->>>>>>> c318aa5 (Fixed margin and pushed rainbow img to right)
 a:link {
     color: white;
     text-decoration: none;
